fix: fact title wrap in mobile

--- a/src/components/fact/Fact.scss
+++ b/src/components/fact/Fact.scss
@@ -31,6 +31,10 @@
             &__title-text {
                 @include boldSmallText();
                 white-space: nowrap;
+
+                @media (max-width: 360px) {
+                    white-space: wrap;
+                }
             }
 
             &__info {
